# hermes-deepgram-voice-plugin

./: .pre-commit-config.yaml  LICENSE  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
hermes_deepgram_voice/: __init__.py  config.py  http.py  stt.py  tts.py
tests/: conftest.py  test_config.py  test_http.py  test_registration.py  test_stt.py  test_tts.py
